@@ -38,6 +38,25 @@
 #   port - Server TCP port number.
 #
 # -----------
+#   bindaddr - Server listen address. Used to force vtund to bind
+# 	to the specific address and port in server mode.
+#    Format:	  
+#       bindaddr {
+#         option .....;
+#       };
+#
+#    'bindaddr' options:
+#
+#    iface - Use interface address as the listen address.
+#    Format:
+#       iface if_name;
+#
+#    addr - Listen address.
+#    Format:
+#       addr ip_address;
+#       addr host_name;
+#
+# -----------
 #   syslog - Syslog facility.
 #
 # -----------
@@ -211,7 +230,7 @@
 #
 # -----------
 #    srcaddr - Local (source) address. Used to force vtund to bind
-# 	to the specific address and port.
+# 	to the specific address and port in client mode.
 #    Format:	  
 #       srcaddr {
 #         option .....;
@@ -251,6 +270,7 @@
 #
 options {
   port 5000;		# Listen on this port.
+  bindaddr { iface lo; };   # Listen only on loopback device.
 
   # Syslog facility
   syslog 	daemon;
